Update _Autopsy Startup Error Troubleshooting .md